--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.15.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.26.3",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
